# VIA-Intelligent-CenterNet

./: .gitignore  README.md  config.py  datasets.py  demo.py  detect.py  inference.py  requirements.txt  test_dataset.py  train.py  utils.py
dataset/: __init__.py  config.py  data_augment.py  traffic_dataset.py
layers/modules/: multibox_loss.py
models/: base.py  centernet.py  layers.py  loss.py  model.py  retinaface.py  tempered_model.py
models/backbone/: __init__.py  mobilenet_temper_wrapper.py  mobilenetv2.py  vgg.py
ncnn/: CMakeLists.txt  CenterFace.cpp  CenterFace.hpp  centernet.param  main.cpp  utils.cpp
utils/: box_utils.py
